# merc-website

./: .gitignore  .gitmodules  README.md  mkdocs.yml  requirements.txt  zensical.toml
.github/workflows/: doc.yml
docs/: aterms.md  index.md
docs/developer/: aterms.md  combine.md  documentation.md  general.md  impossible_futures.md  parsing.md  refinement.md  term_trait.md  testing.md  variable_ordering.md  vpg.md
docs/maintainers/: general.md  publishing.md
docs/stylesheets/: extra.css
docs/tools/: merc-sym.md
plugins/embed_latex/: README.md  embed_latex.py  pyproject.toml
plugins/mkdocs-latex-math/: README.md  latex_math.py  pyproject.toml
