[project]
name = "embed-latex"
version = "0.1.0"
description = "MkDocs plugin to embed LaTeX"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Maurice Laveaux", email = "m.laveaux@tue.nl"}]
license = "BSL-1.0"
license-files = ["LICENSE"]
dependencies = ["mkdocs >= 1.4"]

[project.urls]
Repository = "https://github.com/MERCorg/merc-website"

[project.entry-points."mkdocs.plugins"]
embed_latex = "embed_latex:EmbedLatexPlugin"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"